--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/bootstrap.css">
+    <link rel="stylesheet" href="./bootstrap.css">
 </head>
 <body>
     <section class="container-fluid d-flex align-items-center bg-black vh-100 pb-5">  
@@ -124,5 +124,5 @@
     </div>  
 </footer>
 </body>
-<script src="/bootstrap.js"></script>
+<script src="./bootstrap.js"></script>
 </html>
